                        Current Project Changelog

* Sat Aug 23 2003 Hunter Matthews <thm@duke.edu>
- Lots of redesign (on paper) has occured - I've not been idle.
- Took out all of the source/binary distinction code from cadmin and the api.
    Still need to do this for the database.
- All changes are to postgres.py:
-   Rearrangement of imports, seperate python modules from current specific
-   Spelling corrections
-   Added whitespace to many places to make review of the code easier.
-   Renamed _scanDirToChannel() to be _scanBinDir() to match the source
      functions.
-   Instead of passing the config dict all over hells half acre, just sucked
      it into the main object. in the future, we'll just suck the bits we 
      require selectively, but this was still cleaner than the old way.
-   For some reason, the code got real hyper about requesting a new cursor
      in lots of places. But not everywhere. Now the connect method creates
      one and only one, and every other method just uses that cursor.

* Thu Aug  7 2003 Hunter Matthews <thm@duke.edu>
- Applied patches from Burt Holzman <burt@bar.chm.bnl.gov>
  Fixed one 0/1 error for bin/src rpms. (Going away, but its still wrong)
  Fixed the mysql schema file  not having closing quotes.

* Fri Aug  1 2003 Hunter Matthews <thm@duke.edu>
- Code cleanups: took excess whitespace out of ('s and )'s 
- Code cleanups: changed all the sql from "blah '%s' blah blah" % value to
  "blah %s blah blah", value
  This has the backend module doing the quoting for us.

* Fri Jul 25 2003 Hunter Matthews <thm@duke.edu>
- Took out "on(COLUMN)" syntax from SQL queries - this should make all but 
  the initdb sql compatible between postgres and mysql.
- Applied some bug fixes (is this a list or not) from the mysql patch.
- There was code to convert RPM.size (an int) into a string. 
  Changed the schema instead to just make it a string.
  (We never do math on the value, we just hand it to the client)