@@ -9,7 +9,6 @@ create table PACKAGE (
     release         varchar(32) not null,
     epoch           varchar(8)
     );
-create index PACKAGE_ID_IDX on PACKAGE(package_id);
 create index PACKAGE_NAME_IDX on PACKAGE(pkgname);
 create index PACKAGE_VERSION_IDX on PACKAGE(version);
 create index PACKAGE_RELEASE_IDX on PACKAGE(release);
@@ -23,7 +22,6 @@ create table RPM (
     arch            varchar(32) not null,
     size            varchar(32) not null
     );
-create index RPM_ID_IDX on RPM(rpm_id);
 create index RPM_PACKAGE_ID_IDX on RPM(package_id);
 create index RPM_SRPM_ID_IDX on RPM(srpm_id);
 
@@ -33,7 +31,6 @@ create table CHAN_RPM_ORIG (
     rpm_id      int not null,
     chan_id     int not null
     );
-create index OCHAN_RPM_ID_IDX on CHAN_RPM_ORIG(rpm_id);
 create index OCHAN_CHAN_ID_IDX on CHAN_RPM_ORIG(chan_id);
 
 create sequence chan_rpm_act_seq;
@@ -42,7 +39,6 @@ create table CHAN_RPM_ACT (
     rpm_id      int not null,
     chan_id     int not null
     );
-create index ACHAN_RPM_ID_IDX on CHAN_RPM_ACT(rpm_id);
 create index ACHAN_CHAN_ID_IDX on CHAN_RPM_ACT(chan_id);
 
 create sequence srpm_id_seq;
@@ -51,7 +47,6 @@ create table SRPM (
     filename        varchar(1024) not null,
     pathname        varchar(1024) not null
     );
-create index SRPM_ID_IDX on SRPM(srpm_id);
 
 create sequence rpmprovide_id_seq;
 create table RPMPROVIDE (
@@ -61,7 +56,6 @@ create table RPMPROVIDE (
     flags           varchar(64),
     vers            varchar(64)
     );
-create index RPMPROVIDE_ID_IDX on RPMPROVIDE(rpmprovide_id);
 create index RPMPROVIDE_RPM_ID_IDX on RPMPROVIDE(rpm_id);
 
 create sequence rpmpayload_seq;
@@ -70,7 +64,6 @@ create table RPMPAYLOAD (
     rpm_id          int not null,
     name            varchar(4096)
     );
-create index RPMPAYLOAD_RPM_ID_IDX on RPMPAYLOAD(rpm_id);
 
 create sequence rpmobsolete_id_seq;
 create table RPMOBSOLETE (
@@ -80,7 +73,6 @@ create table RPMOBSOLETE (
     flags           varchar(64),
     vers            varchar(64)
     );
-create index RPMOBSOLETE_ID_IDX on RPMOBSOLETE(rpmobsolete_id);
 create index RPMOBSOLETE_RPM_ID_IDX on RPMOBSOLETE(rpm_id);
                     
 create sequence channel_id_seq;
@@ -94,7 +86,6 @@ create table CHANNEL (
     description     varchar(1024),
     lastupdate      varchar(64)
     );
-create index CHANNEL_ID_IDX on CHANNEL(channel_id);
 
 create sequence channel_dir_id_seq;
 create table CHANNEL_DIR (
@@ -102,7 +93,6 @@ create table CHANNEL_DIR (
     channel_id      int not null,
     dirpathname     varchar(256)
     );
-create index CHANNEL_DIR_ID_IDX on CHANNEL_DIR(channel_dir_id);
 create index CHANNEL_DIR_CHAN_ID_IDX on CHANNEL_DIR(channel_id);
 
 """
