@@ -1,53 +1,0 @@
-# Example Current config file
-#
-
-[current]
-db_type = shelf
-db_connect = (what goes here???)
-
-# db_type = postgresql
-# db_connect = (host, database, user, password, opt, tty)
-
-log_file = /var/log/httpd/current.log    
-apache_config_file = /etc/httpd/conf/current.httpd.conf
-access_type = user
-access_arg = apache
-current_dir = /local/linux/current
-
-#welcome_message = "Welcome to Hunter's up2date server."
-#privacy_statement = "Privacy Statement for Hunter's up2date server"
-
-# [redhat-7.3-i386]
-# name = Red Hat Linux 7.3
-# parent_channel = 
-# arch = i386
-# os_release = 7.3
-# description = Red Hat Linux 7.3
-# srpm_check = 0
-# 
-# rpm_dirs = /local/linux/redhat-7.3/RedHat/RPMS
-#            /local/linux/redhat-7.3/other-pkgs/rh-updates 
-#            /local/linux/redhat-7.3/other-pkgs/dulug
-#            /local/linux/redhat-7.3/other-pkgs/phy
-#            /local/linux/redhat-7.3/other-pkgs/powertools
-#            /local/linux/redhat-7.3/other-pkgs/rawhide
-# 
-# src_dirs = /local/linux/redhat-7.3/SRPMS
-# 
-# # Note: since they are NOT included in valid_channels above, these channels
-# # won't be created or used. They are just "live" doc.
-# 
-# # The following is an example of what a sub-channel might look like.
-# # You leave arch and os_release out of sub-channels, as they must match
-# # the parent.
-# [biology-7.1-i386]
-# name = Duke Biology 7.1
-# parent_channel = redhat-7.3-i386
-# description = Duke Biology specific package will build upon Red Hat
-# srpm_check = 0
-# 
-# rpm_dirs = /local/linux/redhat-7.3/i386/other-pkgs/bio
-# src_dirs = 
-
-
-## END OF LINE ##
